Spacing Fix

--- a/src/Tiptap.css
+++ b/src/Tiptap.css
@@ -129,7 +129,7 @@ button:focus {
   width: 720px;
   max-height: 400px;
   object-fit: cover;
-  background: #d3d3d31a;
+  background: #f1f1f18f;
   border-radius: 3px;
   left:10px;
 
